Translations and changed height of timeline course events

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -545,6 +545,7 @@ log.event.external_blog_registered                              = S'ha registrat
 log.event.external_blog_unregistered                            = S'ha tret del registre el blog extern
 log.event.external_blog_updated                                 = S'ha actualitzat el blog extern
 log.event.external_registered_blogs_viewed                      = S'han mostrat els blogs externs registrats
+log.event.fedback_viewed                                        = S'ha visualitzat la retroacci\u00F3
 log.event.feedback_viewed                                       = S'ha visualitzat la retroacci\u00F3
 log.event.field_created                                         = S'ha creat un camp
 log.event.field_deleted                                         = S'ha suprimit un camp
@@ -700,7 +701,7 @@ log.event.submission_deleted_                                   = Tramesa esborr
 log.event.submission_form_viewed                                = S'ha visualitzat el formulari de tramesa.
 log.event.submission_reassessed                                 = S'ha reavaluat la tramesa
 log.event.submission_updated                                    = S'ha actualitzat la tasca.
-log.event.submission_updated_                                   = S'ha actualitzat la tasca.
+log.event.submission_updated2                                   = S'ha actualitzat la tasca.
 log.event.submission_viewed                                     = S'ha mostrat la tramesa
 log.event.submission_viewed_                                    = S'ha mostrat la tramesa
 log.event.submitted_scorm_raw_score                             = Submitted SCORM raw score
