--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -545,6 +545,7 @@ log.event.external_blog_registered                              = Externer Blog 
 log.event.external_blog_unregistered                            = Externer Blog unverbunden
 log.event.external_blog_updated                                 = Externer Blog aktualisiert
 log.event.external_registered_blogs_viewed                      = Extern verbundene Blogs angezeigt
+log.event.fedback_viewed                                        = Feedback angezeigt
 log.event.feedback_viewed                                       = Feedback angezeigt
 log.event.field_created                                         = Feld angelegt
 log.event.field_deleted                                         = Feld gel\u00F6scht
@@ -700,7 +701,7 @@ log.event.submission_deleted_                                   = Abgabe gel\u00
 log.event.submission_form_viewed                                = Abgabeformular angezeigt
 log.event.submission_reassessed                                 = Abgabe neu beurteilt
 log.event.submission_updated                                    = Nutzer/in hat L\u00F6sung gesichert.
-log.event.submission_updated_                                   = Nutzer/in hat L\u00F6sung gesichert.
+log.event.submission_updated2                                   = Nutzer/in hat L\u00F6sung gesichert.
 log.event.submission_viewed                                     = Abgabe angezeigt
 log.event.submission_viewed_                                    = Abgabe angezeigt
 log.event.submitted_scorm_raw_score                             = \u00DCbermittelte Punktzahl des Lernpakets
