--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -254,9 +254,11 @@ clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.silhouetteWidth               = Silhouette Width
 clustering.smooth                        = Smooth
+clustering.smooth.tooltip                = Smooth
 clustering.standard                      = Partitional
 clustering.table                         = Data table
 clustering.tol                           = Tolerance
+clustering.tol.tooltip                   = Tolerance
 clustering.type                          = Type
 clustering.type.activity                 = Activity Completion
 clustering.type.grade                    = Grade
@@ -617,6 +619,7 @@ log.event.external_blog_registered                              = External blog 
 log.event.external_blog_unregistered                            = External blog unregistered
 log.event.external_blog_updated                                 = External blog updated
 log.event.external_registered_blogs_viewed                      = External registered blogs viewed
+log.event.fedback_viewed                                        = Feedback viewed
 log.event.feedback_viewed                                       = Feedback viewed
 log.event.field_created                                         = Field created
 log.event.field_deleted                                         = Field deleted
@@ -772,7 +775,7 @@ log.event.submission_deleted_                                   = Submission del
 log.event.submission_form_viewed                                = Submission form viewed.
 log.event.submission_reassessed                                 = Submission re-assessed
 log.event.submission_updated                                    = Submission updated.
-log.event.submission_updated_                                   = Submission updated.
+log.event.submission_updated2                                   = Submission updated.
 log.event.submission_viewed                                     = Submission viewed
 log.event.submission_viewed_                                    = Submission viewed
 log.event.submitted_scorm_raw_score                             = Submitted SCORM raw score
