--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -254,9 +254,11 @@ clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.silhouetteWidth               = Ancho de silueta
 clustering.smooth                        = Smooth
+clustering.smooth.tooltip                = Smooth
 clustering.standard                      = Particional
 clustering.table                         = Tabla de datos
 clustering.tol                           = Tolerancia
+clustering.tol.tooltip                   = Tolerancia
 clustering.type                          = Tipo
 clustering.type.activity                 = Finalizaci\u00F3n Actividad
 clustering.type.grade                    = Calificaci\u00F3n
@@ -617,6 +619,7 @@ log.event.external_blog_registered                              = Blog externo r
 log.event.external_blog_unregistered                            = Blog externo no registrado
 log.event.external_blog_updated                                 = Blog externo actualizado
 log.event.external_registered_blogs_viewed                      = Blogs externos registrados visualizados
+log.event.fedback_viewed                                        = Retroalimentaci\u00F3n vista
 log.event.feedback_viewed                                       = Retroalimentaci\u00F3n vista
 log.event.field_created                                         = Campo creado
 log.event.field_deleted                                         = Campo borrado
@@ -772,7 +775,7 @@ log.event.submission_deleted_                                   = Env\u00EDo bor
 log.event.submission_form_viewed                                = Formulario de entrega visto.
 log.event.submission_reassessed                                 = Entrega re-evaluada
 log.event.submission_updated                                    = Env\u00EDo actualizado.
-log.event.submission_updated_                                   = Env\u00EDo actualizado.
+log.event.submission_updated2                                   = Env\u00EDo actualizado.
 log.event.submission_viewed                                     = Entrega vista
 log.event.submission_viewed_                                    = Entrega vista
 log.event.submitted_scorm_raw_score                             = Enviada puntuaci\u00F3n bruta SCORM
