--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -545,6 +545,7 @@ log.event.external_blog_registered                              = Blog externe e
 log.event.external_blog_unregistered                            = Blog externe d\u00E9senregistr\u00E9
 log.event.external_blog_updated                                 = Blog externe mis \u00E0 jour
 log.event.external_registered_blogs_viewed                      = Blog externe enregistr\u00E9 consult\u00E9
+log.event.fedback_viewed                                        = Feedback consult\u00E9
 log.event.feedback_viewed                                       = Feedback consult\u00E9
 log.event.field_created                                         = Champ cr\u00E9\u00E9
 log.event.field_deleted                                         = Champ supprim\u00E9
@@ -700,7 +701,7 @@ log.event.submission_deleted_                                   = Travail suppri
 log.event.submission_form_viewed                                = Formulaire de remise consult\u00E9
 log.event.submission_reassessed                                 = Travail r\u00E9-\u00E9valu\u00E9
 log.event.submission_updated                                    = Travail de devoir modifi\u00E9
-log.event.submission_updated_                                   = Travail de devoir modifi\u00E9
+log.event.submission_updated2                                   = Travail de devoir modifi\u00E9
 log.event.submission_viewed                                     = Travail consult\u00E9
 log.event.submission_viewed_                                    = Travail consult\u00E9
 log.event.submitted_scorm_raw_score                             = Score brut SCORM envoy\u00E9
