--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -545,6 +545,7 @@ log.event.external_blog_registered                              = Registrato blo
 log.event.external_blog_unregistered                            = Rimossa registrazione blog esterno
 log.event.external_blog_updated                                 = Aggiornato blog esterno
 log.event.external_registered_blogs_viewed                      = Visualizzato blog esterno registrato
+log.event.fedback_viewed                                        = Visualizzato commento
 log.event.feedback_viewed                                       = Visualizzato commento
 log.event.field_created                                         = Creato campo
 log.event.field_deleted                                         = Eliminato campo
@@ -700,7 +701,7 @@ log.event.submission_deleted_                                   = Eliminata cons
 log.event.submission_form_viewed                                = Visualizzata scheda di consegna
 log.event.submission_reassessed                                 = Valutata di nuovo consegna
 log.event.submission_updated                                    = Salvata consegna da parte di un utente
-log.event.submission_updated_                                   = Salvata consegna da parte di un utente
+log.event.submission_updated2                                   = Salvata consegna da parte di un utente
 log.event.submission_viewed                                     = Visualizzata consegna
 log.event.submission_viewed_                                    = Visualizzata consegna
 log.event.submitted_scorm_raw_score                             = Inviato punteggio SCORM grezzo
