--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -545,6 +545,7 @@ log.event.external_blog_registered                              = Blogue externo
 log.event.external_blog_unregistered                            = Removido o registo do blogue externo
 log.event.external_blog_updated                                 = Blogue externo atualizado
 log.event.external_registered_blogs_viewed                      = Visualizados os blogues externos registados
+log.event.fedback_viewed                                        = Coment\u00E1rios visualizados
 log.event.feedback_viewed                                       = Coment\u00E1rios visualizados
 log.event.field_created                                         = Campo criado
 log.event.field_deleted                                         = Campo eliminado
@@ -700,7 +701,7 @@ log.event.submission_deleted_                                   = Submiss\u00E3o
 log.event.submission_form_viewed                                = Formul\u00E1rio de submiss\u00E3o visualizado.
 log.event.submission_reassessed                                 = Submiss\u00E3o reavaliada
 log.event.submission_updated                                    = O utilizador guardou as altera\u00E7\u00F5es \u00E0 submiss\u00E3o.
-log.event.submission_updated_                                   = O utilizador guardou as altera\u00E7\u00F5es \u00E0 submiss\u00E3o.
+log.event.submission_updated2                                   = O utilizador guardou as altera\u00E7\u00F5es \u00E0 submiss\u00E3o.
 log.event.submission_viewed                                     = Submiss\u00E3o visualizada
 log.event.submission_viewed_                                    = Submiss\u00E3o visualizada
 log.event.submitted_scorm_raw_score                             = Nota bruta do SCORM submetida
