--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -880,20 +880,20 @@ passGradeColor = Passant el color de grau
 
 physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
 physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
-physics.barnesHut.damping                      = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Damping [0.0, 1.0]
 physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
 physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
 physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
 physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
 physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
 physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
-physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Damping [0.0, 1.0]
 physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
 physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
 physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
 physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
 physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
-physics.repulsion.damping                      = Physics -> Repulsion -> Avoid overlap [0.0, 1.0]
+physics.repulsion.damping                      = Physics -> Repulsion -> Damping [0.0, 1.0]
 physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
 physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
 physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
