--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -954,20 +954,20 @@ passGradeColor = Color de calificaci\u00F3n aprobada
 
 physics.barnesHut.avoidOverlap                 = F\u00EDsica -> Barnes Hut -> Evitar solapamiento [0.0, 1.0]
 physics.barnesHut.centralGravity               = F\u00EDsica -> Barnes Hut -> Gravedad central
-physics.barnesHut.damping                      = F\u00EDsica -> Barnes Hut -> Evitar solapamiento [0.0, 1.0]
+physics.barnesHut.damping                      = F\u00EDsica -> Barnes Hut -> Amortiguamiento [0.0, 1.0]
 physics.barnesHut.gravitationalConstant        = F\u00EDsica -> Barnes Hut -> Constante gravitacional
-physics.barnesHut.springConstant               = Physics -> Barnes hut ->  Constante del muelle
+physics.barnesHut.springConstant               = F\u00EDsica -> Barnes hut ->  Constante del muelle
 physics.barnesHut.springLength                 = F\u00EDsica -> Barnes Hut -> Longitud del muelle
 physics.barnesHut.theta                        = F\u00EDsica -> Barnes Hut -> Theta
 physics.forceAtlas2Based.avoidOverlap          = F\u00EDsica -> Force Atlas 2 -> Evitar solapamiento [0.0, 1.0]
 physics.forceAtlas2Based.centralGravity        = F\u00EDsica -> Force Atlas 2 -> Gravedad central
-physics.forceAtlas2Based.damping               = F\u00EDsica -> Force Atlas 2 -> Evitar solapamiento [0.0, 1.0]
+physics.forceAtlas2Based.damping               = F\u00EDsica -> Force Atlas 2 -> Amortiguamiento [0.0, 1.0]
 physics.forceAtlas2Based.gravitationalConstant = F\u00EDsica -> Force Atlas 2 -> Constante gravitacional
 physics.forceAtlas2Based.springConstant        = F\u00EDsica -> Force Atlas 2 -> Constante del muelle
 physics.forceAtlas2Based.springLength          = F\u00EDsica -> Force Atlas 2 -> Longitud del muelle
 physics.forceAtlas2Based.theta                 = F\u00EDsica -> Force Atlas 2 -> Theta
 physics.repulsion.centralGravity               = F\u00EDsica -> Repulsi\u00F3n -> Gravedad central
-physics.repulsion.damping                      = F\u00EDsica -> Repulsi\u00F3n -> Evitar solapamiento [0.0, 1.0]
+physics.repulsion.damping                      = F\u00EDsica -> Repulsi\u00F3n -> Amortiguamiento [0.0, 1.0]
 physics.repulsion.nodeDistance                 = F\u00EDsica -> Repulsi\u00F3n -> Distancia del nodo
 physics.repulsion.springConstant               = F\u00EDsica -> Repulsi\u00F3n ->  Constante del muelle
 physics.repulsion.springLength                 = F\u00EDsica -> Repulsi\u00F3n -> Longitud del muelle
