Change listenner to weak listenner, added translations h5p

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -367,6 +367,9 @@ log.component.forum                                             = F\u00F2rum
 log.component.glossary                                          = Glossari
 log.component.grade_history                                     = Historial de qualificacions
 log.component.grader_report                                     = Informe del qualificador
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = Paquet de contingut IMS
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -849,6 +852,7 @@ module.folder          = Carpeta
 module.forum           = F\u00F2rum
 module.glossary        = Glossari
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = Paquet de contingut IMS
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
