--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -441,6 +441,9 @@ log.component.forum                                             = Forum
 log.component.glossary                                          = Glossary
 log.component.grade_history                                     = Grade history
 log.component.grader_report                                     = Grader report
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = IMS content package
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -923,6 +926,7 @@ module.folder          = Folder
 module.forum           = Forum
 module.glossary        = Glossary
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = IMS content package
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
