--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -441,6 +441,9 @@ log.component.forum                                             = Foro
 log.component.glossary                                          = Glosario
 log.component.grade_history                                     = Historial de calificaci\u00F3n
 log.component.grader_report                                     = Informe del Calificador
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P contenido visto
+log.component.h5p_package                                       = Paquete H5P
 log.component.ims_content_package                               = Paquete de contenidos IMS
 log.component.kaltura_media_assignment                          = Entrega Kaltura media
 log.component.kaltura_video_resource                            = Recurso de video de Kaltura
@@ -923,6 +926,7 @@ module.folder          = Carpeta
 module.forum           = Foro
 module.glossary        = Glosario
 module.guiadocente     = Gu\u00EDa docente
+module.h5pactivity     = H5P
 module.imscp           = Paquete de contenido IMS
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
