--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -367,6 +367,9 @@ log.component.forum                                             = Forum
 log.component.glossary                                          = Glossaire
 log.component.grade_history                                     = Historique d'\u00E9valuation
 log.component.grader_report                                     = Rapport de l'\u00E9valuateur
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = Paquetage IMS Content
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -849,6 +852,7 @@ module.folder          = Dossier
 module.forum           = Forum
 module.glossary        = Glossaire
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = Paquet de contenu IMS
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
