--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -367,6 +367,9 @@ log.component.forum                                             = Forum
 log.component.glossary                                          = Glossario
 log.component.grade_history                                     = Storico delle valutazioni
 log.component.grader_report                                     = Registro valutatore
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = IMS Content Package
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -849,6 +852,7 @@ module.folder          = Cartella
 module.forum           = Forum
 module.glossary        = Glossario
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = Pacchetto di contenuti IMS
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
