--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -367,6 +367,9 @@ log.component.forum                                             = F\u00F3rum
 log.component.glossary                                          = Gloss\u00E1rio
 log.component.grade_history                                     = Hist\u00F3rico das notas
 log.component.grader_report                                     = Pauta do avaliador
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = Pacotes IMS
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -849,6 +852,7 @@ module.folder          = Pasta
 module.forum           = F\u00F3rum
 module.glossary        = Gloss\u00E1rio
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = Pacote de conte\u00FAdo IMS
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
