--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -1,8 +1,6 @@
 
 ACTIVITIES_TABLE = Aktivit\u00E4tsabschluss
 
-BARNES_HUT = Barnes Hut
-
 BOXPLOT = BoxPlot
 
 BOXPLOT.xAxisTitle          = Grade Artikel
@@ -28,8 +26,6 @@ BUBBLE_LOGARITHMIC = Engagement (Log.)
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
 
-CALENDAR_EVENT_TIMELINE = Timeline
-
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Grade Artikel
@@ -41,17 +37,6 @@ CUM_LINE.xAxisTitle = {0}
 CUM_LINE.yAxisTitle = Logs
 
 Days = Tage
-
-FORCE_ATLAS_2_BASED = Force Atlas 2
-
-FORUM_BAR = Bars
-
-FORUM_BAR.xAxisTitle = Posts
-FORUM_BAR.yAxisTitle = Forums
-
-FORUM_NETWORK = Graph
-
-FORUM_TABLE = Table
 
 GRADE_REPORT_TABLE = Noten
 
@@ -75,8 +60,6 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
-REPULSION = Repulsion
-
 RISK_BAR = Compared risk
 
 RISK_BAR.xAxisTitle          = Days after the last access until {0}
@@ -98,8 +81,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = Stacked Bar
 
@@ -147,12 +131,11 @@ btnLegend = Legende
 
 btnMean = General Stats
 
-button.apply     = Apply
-button.logout    = Ausloggen
-button.restore   = Restore Defaults
-button.save      = Save
-button.search    = Search
-button.selectall = Select all
+button.apply   = Apply
+button.logout  = Ausloggen
+button.restore = Restore Defaults
+button.save    = Save
+button.search  = Search
 
 calculateMax = berechnen Sie max
 
@@ -202,11 +185,6 @@ displayXScaleTitle = Titel X-Achse
 
 displayYScaleTitle = Titel der Y-Achse
 
-edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
-edges.dashes                = Edges -> Dashes
-edges.scaling.max           = Edges -> Scaling -> Max
-edges.scaling.min           = Edges -> Scaling -> Max
-
 emptyGradeColor = Farbe leer Grad
 
 error = Error
@@ -255,8 +233,6 @@ header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
 
-info.courseexported = Course archived, available in offline mode.
-
 information = Information
 
 initialGroups = Erste Gruppen
@@ -266,11 +242,6 @@ initialLastActivity = Letzte Verbindungen
 initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
-
-interaction.keyboard          = Interaction -> Keyboard
-interaction.multiselect       = Interaction -> Multiselect
-interaction.navigationButtons = Interaction -> Navigation buttons
-interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Kategorie / Gegenstand:
@@ -333,9 +304,6 @@ label.welcome                     = Herzlich willkommen
 label.withcompletion              = Completed Act.
 label.withhidden                  = Mit verstecktem
 
-layout.clusterThreshold = Layout -> Cluster threshold
-layout.randomSeed       = Layout -> Random seed
-
 legendActive = Diagrammlegende
 
 limitDays = Limit days
@@ -367,6 +335,9 @@ log.component.forum                                             = Forum
 log.component.glossary                                          = Glossar
 log.component.grade_history                                     = Bewertungsverlauf
 log.component.grader_report                                     = Bewerter\u00FCbersicht
+log.component.h5p                                               = H5P
+log.component.h5p_content_viewed                                = H5P content viewed
+log.component.h5p_package                                       = H5P package
 log.component.ims_content_package                               = IMS-Content
 log.component.kaltura_media_assignment                          = Kaltura media assignment
 log.component.kaltura_video_resource                            = Kaltura video resource
@@ -545,7 +516,6 @@ log.event.external_blog_registered                              = Externer Blog 
 log.event.external_blog_unregistered                            = Externer Blog unverbunden
 log.event.external_blog_updated                                 = Externer Blog aktualisiert
 log.event.external_registered_blogs_viewed                      = Extern verbundene Blogs angezeigt
-log.event.fedback_viewed                                        = Feedback angezeigt
 log.event.feedback_viewed                                       = Feedback angezeigt
 log.event.field_created                                         = Feld angelegt
 log.event.field_deleted                                         = Feld gel\u00F6scht
@@ -701,7 +671,7 @@ log.event.submission_deleted_                                   = Abgabe gel\u00
 log.event.submission_form_viewed                                = Abgabeformular angezeigt
 log.event.submission_reassessed                                 = Abgabe neu beurteilt
 log.event.submission_updated                                    = Nutzer/in hat L\u00F6sung gesichert.
-log.event.submission_updated2                                   = Nutzer/in hat L\u00F6sung gesichert.
+log.event.submission_updated_                                   = Nutzer/in hat L\u00F6sung gesichert.
 log.event.submission_viewed                                     = Abgabe angezeigt
 log.event.submission_viewed_                                    = Abgabe angezeigt
 log.event.submitted_scorm_raw_score                             = \u00DCbermittelte Punktzahl des Lernpakets
@@ -811,7 +781,6 @@ menu.coursestats         = Course stats
 menu.edit                = Bearbeiten
 menu.exit                = Ausgang
 menu.exportconfig        = Export configuration...
-menu.exportcourse        = Archive course
 menu.exportcsv           = CSV-Daten exportieren...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -819,7 +788,6 @@ menu.exportphotos        = With user photos...
 menu.file                = _Datei
 menu.help                = Hilfe
 menu.importconfig        = Import configuration...
-menu.importlogs          = I_mport logs...
 menu.logout              = Ausloggen
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
@@ -849,6 +817,7 @@ module.folder          = Mappe
 module.forum           = Forum
 module.glossary        = Glossar
 module.guiadocente     = Teaching guide
+module.h5pactivity     = H5P
 module.imscp           = IMS-Inhaltspaket
 module.kalvidassign    = Kaltura Media Assignment
 module.kalvidres       = Kaltura Video Resource
@@ -870,48 +839,15 @@ module.workshop        = Werkstatt
 
 moreMax = Maximal
 
-nodes.borderWidth = Nodes -> Border width
-nodes.scaling.max = Nodes -> Scaling -> Max
-nodes.scaling.min = Nodes -> Scaling -> Min
-
-notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
-
 passGradeColor = Passing Grad Farbe
-
-physics.barnesHut.avoidOverlap                 = Physics -> Barnes hut -> Avoid overlap [0.0, 1.0]
-physics.barnesHut.centralGravity               = Physics -> Barnes hut -> Central gravity
-physics.barnesHut.damping                      = Physics -> Barnes Hut -> Damping [0.0, 1.0]
-physics.barnesHut.gravitationalConstant        = Physics -> Barnes hut -> Gravitational constant
-physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
-physics.barnesHut.springLength                 = Physics -> Barnes hut -> Spring length
-physics.barnesHut.theta                        = Physics -> Barnes hut -> Theta
-physics.forceAtlas2Based.avoidOverlap          = Physics -> Barnes hut -> Avoid overlap [0.0, 1.0]
-physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
-physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Damping [0.0, 1.0]
-physics.forceAtlas2Based.gravitationalConstant = Physics -> Barnes hut -> Gravitational constant
-physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
-physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
-physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
-physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
-physics.repulsion.damping                      = Physics -> Repulsion -> Damping [0.0, 1.0]
-physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
-physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
-physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
-physics.solver                                 = Physics -> Solver
-physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
-
-physicsAfterDraw = Enable physics after draw
 
 secondInterval = Sekunden-Intervall
 
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
-tab.calendarevent        = Calendar events
-tab.clustering           = Clustering
 tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
 tab.enrolleduser         = Enrolled
 tab.event                = Veranstaltungen
-tab.forum                = Forums
 tab.grades               = Noten
 tab.logs                 = Protokolle
 tab.noenrolleduser       = Not enrolled
@@ -920,7 +856,6 @@ tab.section              = Abschnitt
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
-tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -935,10 +870,7 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
-text.coursename          = Archive course
-text.coursenametextfield = Archived filename
 text.datetime            = Date and time
-text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
 text.days                = Tage
 text.empty               = N.A
 text.event               = Event
@@ -965,10 +897,8 @@ text.nousers             = Kein Zufall
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
-text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
-text.previouscache       = Previous courses
 text.recent              = K\u00FCrzlich\r\n
 text.restoredefault      = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.search              = Search
@@ -987,8 +917,6 @@ text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Terz
 
-timeInterval = Maximum minute interval
-
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
 
@@ -999,10 +927,6 @@ tooltip.lastconnection   = Letzter Zugriff:
 tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
-
-useInitialNames = Use initials of names
-
-usePhoto = Use photos
 
 useQuartile = Mit Quartile
 
