#90 añadida la opción de ocultar los nodos sin arista

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Aktivit\u00E4tsabschluss
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = BoxPlot
 
 BOXPLOT.xAxisTitle          = Grade Artikel
@@ -26,6 +28,8 @@ BUBBLE_LOGARITHMIC = Engagement (Log.)
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
 
+CALENDAR_EVENT_TIMELINE = Timeline
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Grade Artikel
@@ -37,6 +41,17 @@ CUM_LINE.xAxisTitle = {0}
 CUM_LINE.yAxisTitle = Logs
 
 Days = Tage
+
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
+FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Forums
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
 
 GRADE_REPORT_TABLE = Noten
 
@@ -59,6 +74,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -131,11 +148,12 @@ btnLegend = Legende
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Ausloggen
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Ausloggen
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = berechnen Sie max
 
@@ -184,6 +202,11 @@ cutGrade = Grade zu Pass
 displayXScaleTitle = Titel X-Achse
 
 displayYScaleTitle = Titel der Y-Achse
+
+edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
+edges.dashes                = Edges -> Dashes
+edges.scaling.max           = Edges -> Scaling -> Max
+edges.scaling.min           = Edges -> Scaling -> Min
 
 emptyGradeColor = Farbe leer Grad
 
@@ -242,6 +265,11 @@ initialLastActivity = Letzte Verbindungen
 initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Kategorie / Gegenstand:
@@ -303,6 +331,9 @@ label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
 label.withcompletion              = Completed Act.
 label.withhidden                  = Mit verstecktem
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Diagrammlegende
 
@@ -671,7 +702,7 @@ log.event.submission_deleted_                                   = Abgabe gel\u00
 log.event.submission_form_viewed                                = Abgabeformular angezeigt
 log.event.submission_reassessed                                 = Abgabe neu beurteilt
 log.event.submission_updated                                    = Nutzer/in hat L\u00F6sung gesichert.
-log.event.submission_updated_                                   = Nutzer/in hat L\u00F6sung gesichert.
+log.event.submission_updated2                                   = S'ha actualitzat la tasca.
 log.event.submission_viewed                                     = Abgabe angezeigt
 log.event.submission_viewed_                                    = Abgabe angezeigt
 log.event.submitted_scorm_raw_score                             = \u00DCbermittelte Punktzahl des Lernpakets
@@ -781,6 +812,7 @@ menu.coursestats         = Course stats
 menu.edit                = Bearbeiten
 menu.exit                = Ausgang
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = CSV-Daten exportieren...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -788,6 +820,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _Datei
 menu.help                = Hilfe
 menu.importconfig        = Import configuration...
+menu.importlogs          = I_mport logs...
 menu.logout              = Ausloggen
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
@@ -839,15 +872,50 @@ module.workshop        = Werkstatt
 
 moreMax = Maximal
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passing Grad Farbe
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Damping [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Damping [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Repulsion -> Damping [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = Sekunden-Intervall
 
+showNonConnected = Show nodes without edges
+
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
+tab.calendarevent        = Calendar events
+tab.clustering           = Clustering
 tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
 tab.enrolleduser         = Enrolled
 tab.event                = Veranstaltungen
+tab.forum                = Forums
 tab.grades               = Noten
 tab.logs                 = Protokolle
 tab.noenrolleduser       = Not enrolled
@@ -856,6 +924,7 @@ tab.section              = Abschnitt
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -870,7 +939,10 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
+text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
 text.days                = Tage
 text.empty               = N.A
 text.event               = Event
@@ -897,8 +969,10 @@ text.nousers             = Kein Zufall
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = K\u00FCrzlich\r\n
 text.restoredefault      = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.search              = Search
@@ -917,6 +991,8 @@ text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Terz
 
+timeInterval = Maximum minute interval
+
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
 
@@ -927,6 +1003,10 @@ tooltip.lastconnection   = Letzter Zugriff:
 tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
+
+useInitialNames = Use initials of names
+
+usePhoto = Use photos
 
 useQuartile = Mit Quartile
 
