--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -98,8 +98,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = Stacked Bar
 
@@ -981,6 +982,8 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 physicsAfterDraw = Enable physics after draw
 
 secondInterval = Second interval
+
+showNonConnected = Show nodes without edges
 
 tab.activityCompletion   = Activity Completion
 tab.calendarevent        = Calendar events
