--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -98,8 +98,9 @@ SCATTER_USER = Dispersi\u00F3n de usuarios
 
 SESSION = Sesi\u00F3n
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutos (l\u00EDmite intervalo: {0})
+SESSION.timeInterval = Intervalo m\u00E1ximo de minutos
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutos (l\u00EDmite intervalo: {0})
 
 STACKED_BAR = Barras Apiladas
 
@@ -981,6 +982,8 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Con
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 
 secondInterval = Segundo intervalo
+
+showNonConnected = Mostrar nodos sin aristas
 
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
 tab.calendarevent        = Eventos de calendario
