--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -98,8 +98,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = Bar Empil\u00E9e
 
@@ -907,6 +908,8 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 physicsAfterDraw = Enable physics after draw
 
 secondInterval = deuxi\u00E8me intervalle
+
+showNonConnected = Show nodes without edges
 
 tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
 tab.calendarevent        = Calendar events
