--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -98,8 +98,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = Barres Apilades
 
@@ -907,6 +908,8 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 physicsAfterDraw = Enable physics after draw
 
 secondInterval = segon interval
+
+showNonConnected = Show nodes without edges
 
 tab.activityCompletion   = Compleci\u00F3 de l'activitat
 tab.calendarevent        = Calendar events
