--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -98,8 +98,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = A Barre In Pila
 
@@ -907,6 +908,8 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 physicsAfterDraw = Enable physics after draw
 
 secondInterval = Secondo intervallo
+
+showNonConnected = Show nodes without edges
 
 tab.activityCompletion   = Completamento attivit\u00E0
 tab.calendarevent        = Calendar events
