--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -53,6 +53,13 @@ FORUM_NETWORK = Graph
 
 FORUM_TABLE = Table
 
+FORUM_USER_POST_BAR = User posts
+
+FORUM_USER_POST_BAR.xAxisTitle = Posts
+FORUM_USER_POST_BAR.yAxisTitle = Users with posts
+
+FORUM_WORD_CLOUD = Word cloud
+
 GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Boxplot de Groupe
@@ -947,6 +954,7 @@ text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
 text.days                = Journ\u00E9es
+text.discussioncreation  = Discussions created
 text.empty               = N.A
 text.event               = Event
 text.exportcsv           = Export CSV...
@@ -977,6 +985,7 @@ text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
 text.recent              = R\u00E9cente
+text.replies             = Post replies
 text.restoredefault      = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.search              = Search
 text.seconds             = Secondes
